# kokoro-mlx-rs

./: Cargo.toml
examples/: bench.rs  generate.rs
src/: albert.rs  config.rs  istftnet.rs  lib.rs  model.rs  modules.rs  weights.rs
