[workspace]

[patch.crates-io]
mlx-rs = { git = "https://github.com/oxideai/mlx-rs.git" }
mlx-macros = { git = "https://github.com/oxideai/mlx-rs.git" }
mlx-sys = { git = "https://github.com/oxideai/mlx-rs.git" }

[package]
name = "kokoro-mlx-rs"
version = "0.1.0"
edition = "2021"
description = "Kokoro-82M TTS on Apple Silicon — mlx-rs with mx.compile for optimal GPU performance"
license = "Apache-2.0"
repository = "https://github.com/Gibbio/kokoro-mlx-rs"

[dependencies]
mlx-rs = { git = "https://github.com/oxideai/mlx-rs.git", features = ["safetensors"] }
mlx-macros = { git = "https://github.com/oxideai/mlx-rs.git" }
voice-tts = { path = "../voice-patch/voice-tts" }
voice-nn = { path = "../voice-patch/voice-nn" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "generate"
path = "examples/generate.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"
